@@ -1,3 +1,7 @@
+Wed Jun 18 12:07:25 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* Makefile.in, README: Add comments about Makefile rule.
+
 Tue Jun 17 14:44:02 1997  Jim Kingdon  (unknown@beezley)
 
 	* rcmd.c: Removed; no longer used.
